# tango-fs

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/modules/: Findtango.cmake  update.sh
docker-dev/: Dockerfile  Dockerfile.fc25  Dockerfile.zesty  bash  tango-fs-dev
include/: FsEntry.hpp  FuseOperations.hpp  TangoBasePath.hpp  TangoFuseOperations.hpp  filesystem.hpp  invoker.hpp  lookup.hpp  paths.hpp  tango.hpp  types.hpp  util.hpp
include/handlers/: getattr.hpp  open.hpp  read.hpp  readdir.hpp
src/: main.cpp  util.cpp
test/: entrypoint.cpp  filesystem.test.cpp  mocks.hpp  paths.test.cpp  types.test.cpp
test/handlers/: getattr.test.cpp  open.test.cpp  read.test.cpp  readdir.test.cpp
